istioconf.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http-80
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-istio
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http-8080
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gateway-istio
  http:
  - match:
    - uri:
        prefix: /prometheus/
    rewrite:
      uri: /
    route:
    - destination:
        host: prometheus
        port:
          number: 9090

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gateway-istio
  http:
  - match:
    - uri:
        prefix: /grafana/
    rewrite:
      uri: /
    route:
    - destination:
        host: grafana
        port:
          number: 3000

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gateway-istio
  http:
  - match:
    - uri:
        prefix: /kiali/
    rewrite:
      uri: /
    route:
    - destination:
        host: kiali
        port:
          number: 9090

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /product/
    rewrite:
      uri: /
    route:
    - destination:
        host: product
        port:
          number: 8081

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: category
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /category/
    rewrite:
      uri: /
    route:
    - destination:
        host: category
        port:
          number: 8082

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webshop
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: legacywebshop
            port:
              number: 8083

---
